# apps/api/openapi.json
@@ -940,6 +940,58 @@
         "x-required-role": "QA_MANAGER"
       }
     },
+    "/capture-points": {
+      "get": {
+        "operationId": "CapturePointsController_list",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "CapturePoints"
+        ],
+        "x-required-role": "QA_MANAGER"
+      },
+      "post": {
+        "operationId": "CapturePointsController_create",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "CapturePoints"
+        ],
+        "x-required-role": "QA_MANAGER"
+      }
+    },
+    "/capture-points/{id}": {
+      "delete": {
+        "operationId": "CapturePointsController_archive",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "CapturePoints"
+        ],
+        "x-required-role": "QA_MANAGER"
+      }
+    },
     "/inspections/{inspectionId}/populate": {
       "get": {
         "operationId": "PopulateController_load",
